bin = [
    { name = "l1_1", path = "src/l1_1.rs" },
    { name = "l1_2", path = "src/l1_2.rs" },
    { name = "l1_3", path = "src/l1_3.rs" },
    { name = "l1_4", path = "src/l1_4.rs" },
    { name = "l1_5", path = "src/l1_5.rs" },
    { name = "l1_6", path = "src/l1_6.rs" },
    { name = "l1_7", path = "src/l1_7.rs" },
    { name = "l1_8", path = "src/l1_8.rs" },
    { name = "l1_9", path = "src/l1_9.rs" },
    { name = "l1_10", path = "src/l1_10.rs" },
    { name = "l1_11", path = "src/l1_11.rs" },
    { name = "l1_12", path = "src/l1_12.rs" },
    { name = "l1_13", path = "src/l1_13.rs" },
    { name = "l1_14", path = "src/l1_14.rs" },
    { name = "l1_15", path = "src/l1_15.rs" },
    { name = "l1_16", path = "src/l1_16.rs" },
    { name = "l1_17", path = "src/l1_17.rs" },
    { name = "l1_18", path = "src/l1_18.rs" },
    { name = "l1_19", path = "src/l1_19.rs" },
    { name = "l1_20", path = "src/l1_20.rs" },
    { name = "l1_21", path = "src/l1_21.rs" },
    { name = "l1_22", path = "src/l1_22.rs" },
    { name = "l1_23", path = "src/l1_23.rs" },
    { name = "l1_24", path = "src/l1_24.rs" },
    { name = "l1_25", path = "src/l1_25.rs" },
  ]

[package]
name = "L1"
version = "0.1.0"
edition = "2021"



[dependencies]
